--- a/posts/10-loess.textile
+++ b/posts/10-loess.textile
@@ -1,6 +1,6 @@
 <em>This is day 10 of "One CSV, 30 stories":http://blog.whatfettle.com/2014/10/13/one-csv-thirty-stories/ a series of articles exploring "price paid data":https://www.gov.uk/government/statistical-data-sets/price-paid-data-downloads from the Land Registry found on GOV.UK. The code for this and the other articles is available as open source from "GitHub":https://github.com/psd/price-paid-data</em>
 
-It's been a few days since "yesterday's post": in part because I've been away canal boating without much access to the Internet, but mostly because I spent the time I had literally off in the weeds. It seems I frittered what little time I had for this project exploring statistical techniques to try and make more sense of the prices.
+It's been a few days since "yesterday's post":http://blog.whatfettle.com/2014/10/28/one-csv-thirty-stories-9-yearly/ in part because I've been away canal boating without much access to the Internet, but mostly because I spent the time I had literally off in the weeds. It seems I frittered what little time I had for this project exploring statistical techniques to try and make more sense of the prices.
 
 A week away has also put me in something a reflective mood. Playing with statistics reminded me of my time as a University placement working in an "operational research":http://en.wikipedia.org/wiki/Operations_research team at "ICI":http://en.wikipedia.org/wiki/Imperial_Chemical_Industries in the 1980s. I learnt a lot of things during that year sharing an office with an elderly statistician<a href=#†">†</a>, but above all else, how statistics is an art form in that art is required to use statistics to tell stories.
 
