--- a/posts/10-loess.textile
+++ b/posts/10-loess.textile
@@ -6,18 +6,18 @@ A week away has also put me in something a reflective mood. Playing with statist
 
 <a href="https://www.flickr.com/photos/psd/33877019" title="ICI Mond Division 1984 by Paul Downey, on Flickr"><img src="https://farm1.staticflickr.com/23/33877019_6bf2cd0f39_z.jpg" width="640" height="375" alt="ICI Mond Division 1984"></a>
 
-Something else I've carried with me came directly from my boss at the time, Mike Taylor. I really couldn't have asked for a better sponsor for my "industrial training", someone who really understood the value of using a multiplicity of tools, instilling into me the Marshall McLuhan insight how we shape tools which shape how we think. Mike set me loose on quite a few problems experienced by quite a variety of users, and encouraged to tackle each of them with a different programming language or environment, many of which no longer exist or have much of a footprint on the Web, but as mentioned earlier it was "APL":http://en.wikipedia.org/wiki/APL_(programming_language) which really captured my imagination. Here's a picture of Mike in front of his IBM XT, with its APL keyboard and printer:
+Something else I've carried with me came directly from my boss at the time, Mike Taylor. I really couldn't have asked for a better sponsor for my "industrial training", someone who really understood the value of using a multiplicity of tools, instilling into me the Marshall McLuhan insight how we shape tools which shape how we think. Mike set me loose on quite a few problems experienced by quite a variety of users, and encouraged to tackle each of them with a different programming language or environment, many of which no longer exist or have much of a footprint on the Web. But it was "APL":http://en.wikipedia.org/wiki/APL_(programming_language) which really captured my imagination. Here's a picture of Mike in front of his IBM XT, with its APL keyboard and printer:
 
 <a href="https://www.flickr.com/photos/psd/4321426" title="Mike Taylor ICI Runcorn by Paul Downey, on Flickr"><img src="https://farm1.staticflickr.com/1/4321426_67ffe39a95_z.jpg" width="640" height="431" alt="Mike Taylor ICI Runcorn"></a>
 
-Given my time with the likes of Prolog, SAVOIR and "SAS":http://en.wikipedia.org/wiki/SAS_(software), and my long love of APL, I'm rather surprised to be finding "R":http://en.wikipedia.org/wiki/R_(programming_language) heavy going. Here's a hello-word plot of prices:
+Given my fond memories of this era building small systems in Prolog, Smalltalk, SAVOIR and "SAS":http://en.wikipedia.org/wiki/SAS_(software), and establishing a long love of APL, I'm rather surprised to be finding "R":http://en.wikipedia.org/wiki/R_(programming_language) heavy going, especially given how quick and easy it was to generate an interesting perspective on our prices:
 
 bc. prices <- read.csv("data/prices.tsv", sep="⋯")
 plot(prices[,1])
 
 <a href="https://www.flickr.com/photos/psd/15057749553" title="R prices"><img src="https://farm6.staticflickr.com/5601/15057749553_3406f2e7a2_z.jpg" width="640" height="607" alt="R prices"></a>
 
-R is after all just yet another workspace environment with great matrix manipulation, so what's not to like?  Well whilst interactive environments are great for experimentation and learning, my aesthetic is definitely for small pieces, loosely joined and it's hard to fit workspaces into the "Unix pipeline":http://en.wikipedia.org/wiki/Pipeline_(Unix). It is, however possible to create R scripts using the following "shebang":http://en.wikipedia.org/wiki/Shebang_(Unix):
+R is after all just yet another workspace environment with great matrix manipulation, so what's not to like?  Well whilst interactive environments are great for experimentation and a "REPL":http://en.wikipedia.org/wiki/Read%E2%80%93eval%E2%80%93print_loop is almost essential for learning a new programming language, my aesthetic is definitely for small pieces, loosely joined and it's hard to fit workspaces into the "Unix pipeline":http://en.wikipedia.org/wiki/Pipeline_(Unix). It is, however possible to create R scripts using the following "shebang":http://en.wikipedia.org/wiki/Shebang_(Unix):
 
 bc. #!/usr/bin/env r --slave -f
 
