--- a/posts/17-scattermap-calendar.textile
+++ b/posts/17-scattermap-calendar.textile
@@ -18,7 +18,7 @@ A question a number of people have asked is what happens when the Land Registry 
 
 So I turned to recreating the posters as HTML, and using the browser to design and composite the page. There are a lot of different ways of generating HTML from our data, but I wanted to use a "templating language":http://en.wikipedia.org/wiki/Comparison_of_web_template_engines for which there's again a lot of options. I wrote a "PHP script":https://github.com/psd/price-paid-data/blob/master/bin/scattermap-calendar.php, mostly because selecting something like Ruby or Python means using yet another language for the templatng, but mostly because PHP is ubiquitous. There's a certain amount of snobbery about PHP, but I've no truck for such snark. PHP is the Web's BASIC. It's everywhere, beginner-friendly, and I like it.
 
-This approach seemed hopeful, but then I hit an issue. Chrome in particular struggled loading more, reliably flaking out with more than 5,000 images. I experimented with ways of reducing the number of individual files, including making a single, massive image file, and only showing weekdays, but neither really helped. So I turned to tiling the images, and displaying a portion of each image in each square using CSS sprites. This is where my time went. Front-end development is still tricky, and creating 7,034 squares on a grid using responsive images was a bit of a faff, and getting these images to scale and inside table cells was beyond my skill and luck. Which led to a series of divs with a spacer image:
+This approach seemed hopeful, but then I hit an issue. Chrome in particular struggled, flaking out where there were more than 5,000 images on a page. I experimented with ways of reducing the number of individual files, including making a single, massive image file, and only showing weekdays, but neither really helped. So I turned to tiling the images, and displaying a portion of each image in each square using "CSS sprites":http://en.wikipedia.org/wiki/Sprite_(computer_graphics)#Sprites_by_CSS. This is where much of my time was lost. Front-end development remains a tricky craft, and creating a page of 7,034 tiles on a grid using responsive images was a bit of a faff. Getting these images to scale and inside table cells was beyond my skill. I really should have grabbed one of my many front-end specialist friends to help, but after a Swan load of failed attempts, I landed on something that worked: a series of divs, each with a spacer image:
 
 bc. .day {
   float: left;
